Docker-compose working

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>java-student-api</finalName>
 	</build>
 
 </project>
